--- a/BumpTimer/BumpTimer/MainWindow.xaml
+++ b/BumpTimer/BumpTimer/MainWindow.xaml
@@ -6,40 +6,48 @@
         xmlns:local="clr-namespace:BumpTimer"
         mc:Ignorable="d"
         Title="Bump Timer" 
-				Icon="8bit-timer.png"
-				MaxHeight="200" MaxWidth="800"
-				MinHeight="130" MinWidth="300"
-				Height="140" Width="400" Initialized="Window_Initialized" Activated="Window_Activated">
-	<Window.TaskbarItemInfo>
-		<TaskbarItemInfo x:Name="taskbarItemInfo" />
-	</Window.TaskbarItemInfo>
-	
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="*" />
-			<RowDefinition Height="Auto" />
-		</Grid.RowDefinitions>
-		
-		<ProgressBar x:Name="timerBar" 
-								 Value="100"
-								 Margin="5" />
-		<TextBlock x:Name="timerText"
-							 Grid.Row="1"
-							 Text="30:00"
-							 FontSize="32"
-							 FontWeight="Bold"
-							 HorizontalAlignment="Center"
-							 VerticalAlignment="Center"
-							 Margin="5,0,5,5" />
-		<Button x:Name="timerResetBtn"
-						Grid.Row="1"
-						Content="Click to Reset"
-						FontSize="24"
-						FontWeight="Bold"
-						Padding="10"
-						Visibility="Visible"
-						HorizontalAlignment="Center"
-						VerticalAlignment="Center"
-						Margin="5,0,5,5" Click="timerResetBtn_Click" />
-	</Grid>
+        Icon="clock.ico"
+        MaxHeight="200" MaxWidth="800"
+        MinHeight="130" MinWidth="300"
+        Height="140" Width="400" Initialized="Window_Initialized" Activated="Window_Activated">
+  <Window.TaskbarItemInfo>
+    <TaskbarItemInfo x:Name="taskbarItemInfo">
+      <TaskbarItemInfo.ThumbButtonInfos>
+        <ThumbButtonInfo x:Name="resetThumbBtn" 
+                         DismissWhenClicked="True" 
+                         Description="Reset the timer"
+                         ImageSource="refresh.png"
+                         Click="resetThumbBtn_Click" />
+      </TaskbarItemInfo.ThumbButtonInfos>
+    </TaskbarItemInfo>
+  </Window.TaskbarItemInfo>
+  
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="*" />
+      <RowDefinition Height="Auto" />
+    </Grid.RowDefinitions>
+    
+    <ProgressBar x:Name="timerBar" 
+                 Value="100"
+                 Margin="5" />
+    <TextBlock x:Name="timerText"
+               Grid.Row="1"
+               Text="30:00"
+               FontSize="32"
+               FontWeight="Bold"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"
+               Margin="5,0,5,5" />
+    <Button x:Name="timerResetBtn"
+            Grid.Row="1"
+            Content="Click to Reset"
+            FontSize="24"
+            FontWeight="Bold"
+            Padding="10"
+            Visibility="Visible"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Margin="5,0,5,5" Click="timerResetBtn_Click" />
+  </Grid>
 </Window>
