--- a/CustomSteamTools/TF2TradingToolkit/MainWindow.xaml
+++ b/CustomSteamTools/TF2TradingToolkit/MainWindow.xaml
@@ -1,12 +1,78 @@
-﻿<Window x:Class="TF2TradingToolkit.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TF2TradingToolkit"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
-</Window>
+﻿<e:Window x:Class="TF2TradingToolkit.MainWindow"
+          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+          xmlns:e="http://schemas.codeplex.com/elysium"
+          xmlns:ep="http://schemas.codeplex.com/elysium/params"
+          xmlns:local="clr-namespace:TF2TradingToolkit"
+          mc:Ignorable="d"
+          ep:Design.Theme="Light"
+          ep:Manager.Theme="Light"
+          ep:Design.AccentBrush="{x:Static e:AccentBrushes.Orange}"
+          ep:Manager.AccentBrush="{x:Static e:AccentBrushes.Orange}"
+          Title="TF2 Trading Toolkit"
+          Height="768"
+          Width="1365">
+  <Grid>
+    <TabControl x:Name="MainTabControl"
+                Margin="10 ">
+      <TabItem x:Name="ItemsTab">
+        <TabItem.Header>
+          <StackPanel Orientation="Horizontal">
+            <Image Source="resources/Anger.png"
+                   MinWidth="40.1"
+                   MinHeight="40" />
+            <TextBlock Text="Items"
+                       FontSize="32"
+                       VerticalAlignment="Top"
+                       Margin="5,0,0,0"
+                       FontWeight="SemiBold" />
+          </StackPanel>
+        </TabItem.Header>
+      </TabItem>
+      <TabItem x:Name="BackpackTab">
+        <TabItem.Header>
+          <StackPanel Orientation="Horizontal">
+            <Image Source="resources/BackpackExpander.png"
+                   MinWidth="40.1"
+                   MinHeight="40" />
+            <TextBlock Text="Backpack"
+                       FontSize="32"
+                       VerticalAlignment="Top"
+                       Margin="5,0,0,0"
+                       FontWeight="SemiBold" />
+          </StackPanel>
+        </TabItem.Header>
+      </TabItem>
+      <TabItem x:Name="ClassifiedsTab">
+        <TabItem.Header>
+          <StackPanel Orientation="Horizontal">
+            <Image Source="resources/Nametag.png"
+                   MinWidth="40.1"
+                   MinHeight="40" />
+            <TextBlock Text="Classifieds"
+                       FontSize="32"
+                       VerticalAlignment="Top"
+                       Margin="5,0,0,0"
+                       FontWeight="SemiBold" />
+          </StackPanel>
+        </TabItem.Header>
+      </TabItem>
+      <TabItem x:Name="RangeTab">
+        <TabItem.Header>
+          <StackPanel Orientation="Horizontal">
+            <Image Source="resources/StrangeFilter.png"
+                   MinWidth="40.1"
+                   MinHeight="40" />
+            <TextBlock Text="Range"
+                       FontSize="32"
+                       VerticalAlignment="Top"
+                       Margin="5,0,0,0"
+                       FontWeight="SemiBold" />
+          </StackPanel>
+        </TabItem.Header>
+      </TabItem>
+    </TabControl>
+  </Grid>
+</e:Window>
