--- a/CustomSteamTools/TF2TradingToolkit/View/QualitySelector.xaml
+++ b/CustomSteamTools/TF2TradingToolkit/View/QualitySelector.xaml
@@ -13,46 +13,48 @@
              ep:Manager.AccentBrush="{x:Static e:AccentBrushes.Orange}"
              mc:Ignorable="d"
              d:DesignHeight="32"
-             d:DesignWidth="510">
+             d:DesignWidth="560"
+             Initialized="UserControl_Initialized">
   <WrapPanel>
     <ToggleButton x:Name="UniqueBtn"
                   Content="Unique"
                   ep:Design.AccentBrush="Goldenrod"
                   ep:Manager.AccentBrush="Goldenrod"
-                  Click="UniqueBtn_Click" />
+                  Click="UniqueBtn_Click"
+                  Width="80" />
     <ToggleButton x:Name="StrangeBtn"
                   Content="Strange"
-                  Margin="1,0,0,0"
-                  Click="StrangeBtn_Click" />
+                  Click="StrangeBtn_Click"
+                  Width="80" />
     <ToggleButton x:Name="GenuineBtn"
                   Content="Genuine"
                   ep:Design.AccentBrush="Green"
                   ep:Manager.AccentBrush="Green"
-                  Margin="1,0,0,0"
-                  Click="GenuineBtn_Click" />
+                  Click="GenuineBtn_Click"
+                  Width="80" />
     <ToggleButton x:Name="CollectorsBtn"
                   Content="Collector's"
                   ep:Design.AccentBrush="DarkRed"
                   ep:Manager.AccentBrush="DarkRed"
-                  Margin="1,0,0,0"
-                  Click="CollectorsBtn_Click" />
+                  Click="CollectorsBtn_Click"
+                  Width="80" />
     <ToggleButton x:Name="VintageBtn"
                   Content="Vintage"
                   ep:Design.AccentBrush="Navy"
                   ep:Manager.AccentBrush="Navy"
-                  Margin="1,0,0,0"
-                  Click="VintageBtn_Click" />
+                  Click="VintageBtn_Click"
+                  Width="80" />
     <ToggleButton x:Name="HauntedBtn"
                   Content="Haunted"
                   ep:Design.AccentBrush="Teal"
                   ep:Manager.AccentBrush="Teal"
-                  Margin="1,0,0,0"
-                  Click="HauntedBtn_Click" />
+                  Click="HauntedBtn_Click"
+                  Width="80" />
     <ToggleButton x:Name="UnusualBtn"
                   Content="Unusual"
                   ep:Design.AccentBrush="Purple"
                   ep:Manager.AccentBrush="Purple"
-                  Margin="1,0,0,0"
-                  Click="UnusualBtn_Click" />
+                  Click="UnusualBtn_Click"
+                  Width="80" />
   </WrapPanel>
 </UserControl>
